--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,34 +21,37 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up dependencies on Linux/macOS
-        if: runner.os != 'Windows'
+      - name: Set up dependencies on Linux
+        if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y autoconf automake libtool pkg-config # Linux
-          brew install autoconf automake libtool pkg-config # macOS
-          # Add VLC dependencies or other requirements
+          sudo apt-get install -y autoconf automake libtool pkg-config
+
+      - name: Set up dependencies on macOS
+        if: runner.os == 'macOS'
+        run: |
+          brew update
+          brew install autoconf automake libtool pkg-config
 
       - name: Set up dependencies on Windows
         if: runner.os == 'Windows'
         run: |
-          choco install autoconf automake libtool # Assuming you're using Chocolatey
-          # Add other Windows-specific dependencies
+          choco install autoconf automake libtool
 
       - name: Build the project on Linux/macOS
         if: runner.os != 'Windows'
         run: |
-          ./autogen.sh # If you're using Autoconf
+          ./autogen.sh
           make build
 
       - name: Build the project on Windows
         if: runner.os == 'Windows'
         run: |
-          # Add the Windows build command, e.g., using Visual Studio tools or Makefile if supported on Windows
+          # Add the Windows-specific build command if needed, e.g., using Visual Studio tools
           make build
 
       - name: Run tests
-        run: make test  # Replace with actual test command
+        run: make test
 
   release:
     name: Create Release
