--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,33 +25,24 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y autoconf automake libtool pkg-config
+          sudo apt-get install -y autoconf automake libtool pkg-config git clang
 
       - name: Set up dependencies on macOS
         if: runner.os == 'macOS'
         run: |
           brew update
-          brew install autoconf automake libtool pkg-config
+          brew install autoconf automake libtool pkg-config git clang
 
       - name: Set up dependencies on Windows
         if: runner.os == 'Windows'
         run: |
-          choco install autoconf automake libtool
+          choco install autoconf automake libtool git clang
 
-      - name: Build the project on Linux/macOS
-        if: runner.os != 'Windows'
-        run: |
-          ./autogen.sh
-          make build
-
-      - name: Build the project on Windows
-        if: runner.os == 'Windows'
-        run: |
-          # Add the Windows-specific build command if needed, e.g., using Visual Studio tools
-          make build
+      - name: Build the project
+        run: make build
 
       - name: Run tests
-        run: make test
+        run: make test # You can replace this with your actual test command
 
   release:
     name: Create Release
