--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,28 +21,33 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Set up dependencies on Linux
       - name: Set up dependencies on Linux
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
           sudo apt-get install -y autoconf automake libtool pkg-config git clang
 
+      # Set up dependencies on macOS
       - name: Set up dependencies on macOS
         if: runner.os == 'macOS'
         run: |
           brew update
-          brew install autoconf automake libtool pkg-config git clang
+          brew install autoconf automake libtool pkg-config git llvm
 
+      # Set up dependencies on Windows
       - name: Set up dependencies on Windows
         if: runner.os == 'Windows'
         run: |
-          choco install autoconf automake libtool git clang
+          choco install autoconf automake libtool git llvm
 
+      # Build the project
       - name: Build the project
         run: make build
 
+      # Run tests (replace this step with actual test command if needed)
       - name: Run tests
-        run: make test # You can replace this with your actual test command
+        run: make test # Replace this with your actual test command if applicable
 
   release:
     name: Create Release
