--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,36 +10,18 @@ on:
 
 jobs:
   build:
-    name: Build and Test on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+    name: Build and Test on macos-latest
+    runs-on: macos-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Set up dependencies on Linux
-      - name: Set up dependencies on Linux
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y autoconf automake libtool pkg-config git clang
-
       # Set up dependencies on macOS
       - name: Set up dependencies on macOS
-        if: runner.os == 'macOS'
         run: |
           brew update
           brew install autoconf automake libtool pkg-config git llvm
-
-      # Set up dependencies on Windows
-      - name: Set up dependencies on Windows
-        if: runner.os == 'Windows'
-        run: |
-          choco install autoconf automake libtool git llvm
 
       # Build the project
       - name: Build the project
@@ -51,7 +33,7 @@ jobs:
 
   release:
     name: Create Release
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     needs: build
     if: github.event_name == 'push' && contains(github.ref, 'tags')
 
@@ -61,7 +43,7 @@ jobs:
 
       - name: Set up GitHub CLI
         run: |
-          sudo apt-get install gh
+          brew install gh
           gh auth login --with-token ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create release
