--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
           export DVDREAD_CFLAGS="-I$(pwd)/local_libs/libdvdread/src"
           export DVDREAD_LIBS="-L$(pwd)/local_libs/libdvdread/.libs -ldvdread"
           
-          # Now, build the project
-          make build
+          # Pass include and library paths explicitly during build
+          make build CFLAGS="$DVDREAD_CFLAGS" LDFLAGS="$DVDREAD_LIBS"
 
       # Run tests (replace this step with actual test command if needed)
       - name: Run tests
