--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           brew update
           brew install autoconf automake libtool pkg-config git llvm
 
-      # Build the project
+      # Build the project using clang
       - name: Build the project
         run: |
           # Ensure pkg-config knows where to find libdvdread in local_libs
@@ -32,6 +32,10 @@ jobs:
           # Set DVDREAD_CFLAGS and DVDREAD_LIBS to tell where to find libdvdread
           export DVDREAD_CFLAGS="-I$(pwd)/local_libs/libdvdread/src"
           export DVDREAD_LIBS="-L$(pwd)/local_libs/libdvdread/.libs -ldvdread"
+          
+          # Use clang as the C compiler
+          export CC=clang
+          export CXX=clang++
           
           # Pass include and library paths explicitly during build
           make build CFLAGS="$DVDREAD_CFLAGS" LDFLAGS="$DVDREAD_LIBS"
