--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,24 @@ jobs:
           brew update
           brew install autoconf automake libtool pkg-config git llvm
 
-      # Build the project using clang
-      - name: Build the project
+      # Build libdvdread first and ensure it is built correctly
+      - name: Build libdvdread
+        run: |
+          # Clone and build libdvdread
+          if [ ! -d local_libs/libdvdread ]; then
+            git clone https://code.videolan.org/videolan/libdvdread.git local_libs/libdvdread
+          fi
+          cd local_libs/libdvdread
+          autoreconf -i
+          ./configure
+          make
+          cd ../../
+          
+          # Check if libdvdread was built successfully
+          ls -la local_libs/libdvdread/.libs || { echo "libdvdread build failed or .libs directory missing"; exit 1; }
+
+      # Build libdvdnav
+      - name: Build libdvdnav
         run: |
           # Ensure pkg-config knows where to find libdvdread in local_libs
           export PKG_CONFIG_PATH=$(pwd)/local_libs/libdvdread/.libs/pkgconfig
@@ -43,8 +59,18 @@ jobs:
           export CC=clang
           export CXX=clang++
           
-          # Pass include and library paths explicitly during build
-          make build CFLAGS="$DVDREAD_CFLAGS" LDFLAGS="$DVDREAD_LIBS"
+          # Build libdvdnav
+          if [ ! -d local_libs/libdvdnav ]; then
+            git clone https://code.videolan.org/videolan/libdvdnav.git local_libs/libdvdnav
+          fi
+          cd local_libs/libdvdnav
+          autoreconf -i
+          ./configure
+          make
+          cd ../../
+          
+          # Check if libdvdnav was built successfully
+          ls -la local_libs/libdvdnav/.libs || { echo "libdvdnav build failed or .libs directory missing"; exit 1; }
 
       # Output config.log for debugging if the build fails
       - name: Output config.log for debugging
