--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,20 +101,20 @@ jobs:
       run: |
         if [ ! -f munki-pkg-workspace/build-info.plist ]; then
           mkdir -p munki-pkg-workspace
-          cat <<EOT >> munki-pkg-workspace/build-info.plist
-          <?xml version="1.0" encoding="UTF-8"?>
-          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-          <plist version="1.0">
-          <dict>
-            <key>CFBundleIdentifier</key>
-            <string>com.yourcompany.dvdnavtex</string>
-            <key>CFBundleShortVersionString</key>
-            <string>1.0</string>
-            <key>CFBundleVersion</key>
-            <string>1</string>
-          </dict>
-          </plist>
-          EOT
+          cat <<EOT > munki-pkg-workspace/build-info.plist
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+  <key>CFBundleIdentifier</key>
+  <string>com.yourcompany.dvdnavtex</string>
+  <key>CFBundleShortVersionString</key>
+  <string>1.0</string>
+  <key>CFBundleVersion</key>
+  <string>1</string>
+</dict>
+</plist>
+EOT
           echo "build-info.plist created!"
         else
           echo "build-info.plist already exists."
