--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,17 +31,53 @@ jobs:
           brew update
           brew install autoconf automake libtool pkg-config git llvm
 
-      # Build the application (make sure this step outputs `dvdnavtex`)
-      - name: 🏗️ Build dvdnavtex
-        run: make build
-
-      # Verify that the binary was created successfully
-      - name: Verify binary creation
+      # Build libdvdread and ensure it is built correctly
+      - name: Build libdvdread
         run: |
-          if [ ! -f dvdnavtex ]; then
-            echo "dvdnavtex binary not found! Build failed."
-            exit 1
+          # Clone and build libdvdread
+          if [ ! -d local_libs/libdvdread ]; then
+            git clone https://code.videolan.org/videolan/libdvdread.git local_libs/libdvdread
           fi
+          cd local_libs/libdvdread
+          autoreconf -i
+          ./configure
+          make
+          cd ../../
+          
+          # Check if libdvdread was built successfully
+          ls -la local_libs/libdvdread/.libs || { echo "libdvdread build failed or .libs directory missing"; exit 1; }
+
+      # Build libdvdnav and ensure it knows where libdvdread is located
+      - name: Build libdvdnav
+        run: |
+          # Ensure pkg-config knows where to find libdvdread in local_libs
+          export PKG_CONFIG_PATH=$(pwd)/local_libs/libdvdread/.libs/pkgconfig
+          
+          # Set DVDREAD_CFLAGS and DVDREAD_LIBS to tell where to find libdvdread
+          export DVDREAD_CFLAGS="-I$(pwd)/local_libs/libdvdread/src"
+          export DVDREAD_LIBS="-L$(pwd)/local_libs/libdvdread/.libs -ldvdread"
+          
+          # Debug environment variables
+          echo "DVDREAD_CFLAGS is set to: $DVDREAD_CFLAGS"
+          echo "DVDREAD_LIBS is set to: $DVDREAD_LIBS"
+          echo "PKG_CONFIG_PATH is set to: $PKG_CONFIG_PATH"
+          
+          # Use clang as the C compiler
+          export CC=clang
+          export CXX=clang++
+          
+          # Clone and build libdvdnav
+          if [ ! -d local_libs/libdvdnav ]; then
+            git clone https://code.videolan.org/videolan/libdvdnav.git local_libs/libdvdnav
+          fi
+          cd local_libs/libdvdnav
+          autoreconf -i
+          ./configure || { cat config.log; exit 1; }
+          make
+          cd ../../
+          
+          # Check if libdvdnav was built successfully
+          ls -la local_libs/libdvdnav/.libs || { echo "libdvdnav build failed or .libs directory missing"; exit 1; }
 
       # Cache the build output
       - name: 💭 Cache application
