--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,10 +31,9 @@ jobs:
           brew update
           brew install autoconf automake libtool pkg-config git llvm
 
-      # Build libdvdread first and ensure it is built correctly
+      # Build libdvdread first
       - name: Build libdvdread
         run: |
-          # Clone and build libdvdread
           if [ ! -d local_libs/libdvdread ]; then
             git clone https://code.videolan.org/videolan/libdvdread.git local_libs/libdvdread
           fi
@@ -44,22 +43,29 @@ jobs:
           make
           cd ../../
           
-          # Check if libdvdread was built successfully
           ls -la local_libs/libdvdread/.libs || { echo "libdvdread build failed or .libs directory missing"; exit 1; }
 
-      # Build libdvdnav and link it with libdvdread
+      # Build libdvdcss
+      - name: Build libdvdcss
+        run: |
+          if [ ! -d local_libs/libdvdcss ]; then
+            git clone https://code.videolan.org/videolan/libdvdcss.git local_libs/libdvdcss
+          fi
+          cd local_libs/libdvdcss
+          autoreconf -i
+          ./configure --prefix=$(pwd)
+          make
+          cd ../../
+          
+          ls -la local_libs/libdvdcss/.libs || { echo "libdvdcss build failed or .libs directory missing"; exit 1; }
+
+      # Build libdvdnav
       - name: Build libdvdnav
         run: |
-          # Set the correct environment variables to ensure libdvdread is found
           export PKG_CONFIG_PATH=$(pwd)/local_libs/libdvdread/.libs/pkgconfig
           export DVDREAD_CFLAGS="-I$(pwd)/local_libs/libdvdread/src"
           export DVDREAD_LIBS="-L$(pwd)/local_libs/libdvdread/.libs -ldvdread"
 
-          # Use clang as the C compiler
-          export CC=clang
-          export CXX=clang++
-
-          # Build libdvdnav
           if [ ! -d local_libs/libdvdnav ]; then
             git clone https://code.videolan.org/videolan/libdvdnav.git local_libs/libdvdnav
           fi
@@ -68,9 +74,16 @@ jobs:
           ./configure --prefix=$(pwd) --with-dvdread-libs=$(pwd)/../libdvdread/.libs --with-dvdread-includes=$(pwd)/../libdvdread/src
           make
           cd ../../
-
-          # Check if libdvdnav was built successfully
+          
           ls -la local_libs/libdvdnav/.libs || { echo "libdvdnav build failed or .libs directory missing"; exit 1; }
+
+      # Build the actual dvdnavtex binary
+      - name: Build dvdnavtex binary
+        run: |
+          make build
+          
+          # Ensure the binary exists
+          ls -la dvdnavtex || { echo "dvdnavtex binary not found!"; exit 1; }
 
       # Debug the build output to verify the binary location
       - name: Debug List files in project directory
@@ -79,25 +92,12 @@ jobs:
       - name: Debug List files in local_libs directory
         run: ls -la local_libs
 
-      # Check if the binary was created in multiple potential locations
-      - name: Verify binary creation
-        run: |
-          if [ -f ./dvdnavtex ]; then
-            echo "dvdnavtex binary found in project root!"
-          elif [ -f ./local_libs/dvdnavtex ]; then
-            echo "dvdnavtex binary found in local_libs directory!"
-          else
-            echo "dvdnavtex binary not found!"
-            exit 1
-          fi
-
       # Cache the build output
       - name: 💭 Cache application
         uses: actions/cache@v3.2.2
         id: dvdnavtex-build
         with:
-          path: |
-            ./dvdnavtex
+          path: ./dvdnavtex
           key: ${{ github.sha }}
 
   apple-pkg:
@@ -115,7 +115,7 @@ jobs:
       run: brew -v
 
     # Install required packages
-    - name: 🔨 Install xmlstarlet and python (if needed)
+    - name: 🔨 Install xmlstarlet and python
       run: |
         brew install xmlstarlet python
 
