--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,20 +31,6 @@ jobs:
           brew update
           brew install autoconf automake libtool pkg-config git llvm
 
-      # Build libdvdread first
-      - name: Build libdvdread
-        run: |
-          if [ ! -d local_libs/libdvdread ]; then
-            git clone https://code.videolan.org/videolan/libdvdread.git local_libs/libdvdread
-          fi
-          cd local_libs/libdvdread
-          autoreconf -i
-          ./configure --prefix=$(pwd)
-          make
-          cd ../../
-          
-          ls -la local_libs/libdvdread/.libs || { echo "libdvdread build failed or .libs directory missing"; exit 1; }
-
       # Build libdvdcss
       - name: Build libdvdcss
         run: |
@@ -55,39 +41,51 @@ jobs:
           autoreconf -i
           ./configure --prefix=$(pwd)
           make
+          make install
           cd ../../
-          
+
           ls -la local_libs/libdvdcss/.libs || { echo "libdvdcss build failed or .libs directory missing"; exit 1; }
+
+      # Build libdvdread
+      - name: Build libdvdread
+        run: |
+          if [ ! -d local_libs/libdvdread ]; then
+            git clone https://code.videolan.org/videolan/libdvdread.git local_libs/libdvdread
+          fi
+          cd local_libs/libdvdread
+          autoreconf -i
+          ./configure --prefix=$(pwd) \
+            --with-libdvdcss-includes=$(pwd)/../libdvdcss/include \
+            --with-libdvdcss-lib=$(pwd)/../libdvdcss/lib
+          make
+          make install
+          cd ../../
+
+          ls -la local_libs/libdvdread/lib || { echo "libdvdread build failed or lib directory missing"; exit 1; }
 
       # Build libdvdnav
       - name: Build libdvdnav
         run: |
-          export PKG_CONFIG_PATH=$(pwd)/local_libs/libdvdread/.libs/pkgconfig
-          export DVDREAD_CFLAGS="-I$(pwd)/local_libs/libdvdread/src"
-          export DVDREAD_LIBS="-L$(pwd)/local_libs/libdvdread/.libs -ldvdread"
-          export DYLD_LIBRARY_PATH=$(pwd)/local_libs/libdvdread/.libs
+          export PKG_CONFIG_PATH=$(pwd)/local_libs/libdvdread/lib/pkgconfig
+          export DYLD_LIBRARY_PATH=$(pwd)/local_libs/libdvdread/lib
 
           if [ ! -d local_libs/libdvdnav ]; then
             git clone https://code.videolan.org/videolan/libdvdnav.git local_libs/libdvdnav
           fi
           cd local_libs/libdvdnav
           autoreconf -i
-          ./configure --prefix=$(pwd) CFLAGS="$DVDREAD_CFLAGS" LDFLAGS="$DVDREAD_LIBS"
-          make || { echo "Build failed"; exit 1; }
+          ./configure --prefix=$(pwd)
+          make
+          make install
           cd ../../
-          
-          ls -la local_libs/libdvdnav/.libs || { echo "libdvdnav build failed or .libs directory missing"; exit 1; }
 
-      # Output config.log if there's a failure
-      - name: Output config.log for debugging
-        if: failure()
-        run: cat local_libs/libdvdnav/config.log
+          ls -la local_libs/libdvdnav/lib || { echo "libdvdnav build failed or lib directory missing"; exit 1; }
 
       # Build the actual dvdnavtex binary
       - name: Build dvdnavtex binary
         run: |
           make build
-          
+
           # Ensure the binary exists
           ls -la dvdnavtex || { echo "dvdnavtex binary not found!"; exit 1; }
 
@@ -104,7 +102,7 @@ jobs:
     runs-on: macos-latest
     needs: [build]
     timeout-minutes: 5
-    
+
     steps:
     - name: ⬇️ Checkout repo
       uses: actions/checkout@v3.3.0
@@ -152,7 +150,7 @@ jobs:
       uses: joncrain/munkipkg-action@5a6c2008ded522b67396a78c06983e614cbe22ac
       with:
         pkg_subdir: "munki-pkg-workspace"
-    
+
     # Cache the .pkg output
     - name: 💭 Cache .pkg
       uses: actions/cache@v3.2.2
@@ -179,7 +177,7 @@ jobs:
         path: |
           ./munki-pkg-workspace/build/*
         key: ${{ github.sha }}
-  
+
     # Release the static build and macOS package
     - name: 👷📦 Release static builds & macOS pkg
       uses: softprops/action-gh-release@v0.1.15
