--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   build:
     name: 👷 Build and Test dvd_nav_packet_extract
@@ -225,7 +228,7 @@ jobs:
 
       # Release the static build and macOS package
       - name: 👷📦 Release static builds & macOS pkg
-        uses: softprops/action-gh-release@v0.1.15
+        uses: softprops/action-gh-release@v1
         with:
           generate_release_notes: true
           files: |
