--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,6 +128,9 @@ jobs:
       # Run dvdnavtex tests on the generated DVD structure
       - name: Run dvdnavtex tests
         run: |
+          ls -la
+          ls -lrth
+          tree
           cd ./bbb_dvd_creator.sh/custom_dvd/VIDEO_TS
           # Assuming dvdnavtex testing command:
           dvdnavtex --test VTS_01_1.VOB
