--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,8 +132,9 @@ jobs:
           ls -lrth
           tree
           cd ./bbb_dvd_creator/custom_dvd/VIDEO_TS
-          # Assuming the correct path to dvdnavtex:
-          ../../../../dvdnavtex --test VTS_01_1.VOB
+          # Run dvdnavtex from the root directory
+          ../../../dvdnavtex --test VTS_01_1.VOB
+
 
       # Cache the build output
       - name: 💭 Cache application
