--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,7 +136,8 @@ jobs:
         run: |
           ls -la
           cd ./bbb_dvd_creator/custom_dvd/VIDEO_TS
-          /Users/runner/work/dvd_nav_packet_extract/dvd_nav_packet_extract/dvdnavtex --test VTS_01_1.VOB
+          /Users/runner/work/dvd_nav_packet_extract/dvd_nav_packet_extract/dvdnavtex VTS_01_1.VOB
+        
         
 
 
